Reparo no Mapeamento View de Requisitos

--- a/src/main/webapp/template/Layout.xhtml
+++ b/src/main/webapp/template/Layout.xhtml
@@ -38,7 +38,8 @@
 					</p:submenu>
 
 					<p:submenu label="Projetos">
-						<p:menuitem value="Gerenciar Projetos"	action="/restrict/CadastrarProjeto.jsf" ajax="false" icon="" />
+						<p:menuitem value="Adicionar Projeto"	action="/restrict/CadastrarProjeto.jsf" ajax="false" icon="" />
+						<p:menuitem value="Projetos Existentes"	action="/restrict/ListaProjetos.jsf" ajax="false" icon="" />
 					</p:submenu>
 					
 				</p:menu>
