Atualização da task board

--- a/src/main/webapp/template/Layout.xhtml
+++ b/src/main/webapp/template/Layout.xhtml
@@ -7,8 +7,8 @@
 <h:head>
 	<title><ui:insert name="titulo">Prime_Scrum</ui:insert></title>
 	<!--  <h:outputStylesheet name="style.css" />-->
+	<link href="../css/taskboard.css" type="text/css" rel="stylesheet"/>
 </h:head>
-
 <h:body>
 
 	<header>
