--- a/src/main/webapp/css/taskboard.css
+++ b/src/main/webapp/css/taskboard.css
@@ -3,7 +3,7 @@
 }
 
 .ui-dashboard .ui-panel.ui-widget.ui-widget-content.ui-corner-all{
-	width: 90px;
+	/* width: 150;
 	display: inline-block;
-	box-sizing: border-box;	
+	box-sizing: border-box;	*/
 }
