Tela de Login inicio de Controller do login Criação de icone

--- a/src/main/webapp/template/Layout.xhtml
+++ b/src/main/webapp/template/Layout.xhtml
@@ -5,18 +5,17 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title><ui:insert name="titulo">Prime_Scrum</ui:insert></title>
+	<title>
+		<ui:insert name="titulo">
+			Prime_Scrum
+		</ui:insert>
+	</title>
+	<link rel="shortcut icon" href="../images/primescrum.ico" />
 	<!--  <h:outputStylesheet name="style.css" />-->
 	<link href="../css/taskboard.css" type="text/css" rel="stylesheet"/>
 </h:head>
 <h:body>
 
-	<header>
-		<ui:insert name="titulo">
-			<h1>Prime_Scrum</h1>
-		</ui:insert>
-	</header>
-	<h:commandButton value="valor" />
 	<p:layout fullPage="true">
 
 		<p:layoutUnit position="north" size="75" header="Prime Scrum"
