Adição da entidade, controlador e view de cliente. alteração nas view de cadastro de cliente, dev e sm.

--- a/src/main/webapp/template/Layout.xhtml
+++ b/src/main/webapp/template/Layout.xhtml
@@ -34,6 +34,7 @@
 					<p:submenu label="Gerenciar Pessoas">
 						<p:menuitem value="Scrum Master" action="/restrict/CadastrarScrumMaster.jsf" ajax="false" icon="" />
 						<p:menuitem value="Desenvolvedor" action="/restrict/CadastrarDesenvolvedor.jsf" ajax="false" icon="" />
+						<p:menuitem value="Cliente" action="/restrict/CadastrarCliente.jsf" ajax="false" icon="" />
 					</p:submenu>
 
 					<p:submenu label="Projetos">
