Adição de dependencias do spring security

--- a/src/main/webapp/template/Layout.xhtml
+++ b/src/main/webapp/template/Layout.xhtml
@@ -13,6 +13,7 @@
 	<link rel="shortcut icon" href="../images/primescrum.ico" />
 	<!--  <h:outputStylesheet name="style.css" />-->
 	<link href="../css/taskboard.css" type="text/css" rel="stylesheet"/>
+	<link href="../css/styles.css" type="text/css" rel="stylesheet"/>
 </h:head>
 <h:body>
 
