View e Crud de dados pessoais, ScrumMaster, Dev e cliente

--- a/src/main/webapp/template/Layout.xhtml
+++ b/src/main/webapp/template/Layout.xhtml
@@ -29,7 +29,7 @@
 				<p:growl id="menuprincipal" />
 				<p:menu style="width:95%">
 					<p:submenu label="Dados Pessoais">
-						<p:menuitem value="Dados Pessoais"	 ajax="false" icon="" />
+						<p:menuitem value="Dados Pessoais"	action="/restrict/AlterarScrumMaster.jsf" ajax="false" icon="" />
 					</p:submenu>
 					
 					<p:submenu label="Gerenciar Pessoas">
