--- a/src/main/webapp/template/LayoutCliente.xhtml
+++ b/src/main/webapp/template/LayoutCliente.xhtml
@@ -27,7 +27,7 @@
 			<h:form>
 				<p:growl id="menuprincipal" />
 				<p:menu style="width:95%">
-						<p:menuitem value="Dados Pessoais"	 ajax="false" icon="" />
+						<p:menuitem value="Dados Pessoais"	action="/restrict/cliente/AlterarCliente.jsf" ajax="false" icon="" />
 
 						<p:menuitem value="Meus Projetos"	action="/restrict/cliente/ListaProjetos.jsf" ajax="false" icon="" />
 					
