--- a/src/main/webapp/template/LayoutDev.xhtml
+++ b/src/main/webapp/template/LayoutDev.xhtml
@@ -27,7 +27,7 @@
 			<h:form>
 				<p:growl id="menuprincipal" />
 				<p:menu style="width:95%">
-						<p:menuitem value="Dados Pessoais"	 ajax="false" icon="" />
+						<p:menuitem value="Dados Pessoais" action="/restrict/desenvolvedor/AlterarDesenvolvedor.jsf" ajax="false" icon="" />
 
 						<p:menuitem value="Projetos que participo"	action="/restrict/desenvolvedor/ListaProjetos.jsf" ajax="false" icon="" />
 					
