Criação de view de alteração e exclusão de dev e cliente

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -21,3 +21,8 @@
   background: linear-gradient(-45deg, rgba(255,255,136,1) 77%,rgba(255,255,214,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='#ffff88',GradientType=0 ); /* IE6-9 fallback on horizontal gradient */
 }
+
+#tbvGerenciaDeProjeto\j_idt32_label.ui-selectonemenu-label\ui-inputfield\ui-corner-all{
+	width: 150px;
+}
+
