Controle de acesso e loader

--- a/src/main/webapp/template/Layout.xhtml
+++ b/src/main/webapp/template/Layout.xhtml
@@ -9,14 +9,15 @@
 	<!--  <h:outputStylesheet name="style.css" />-->
 	<link href="../css/taskboard.css" type="text/css" rel="stylesheet"/>
 	<link href="../css/styles.css" type="text/css" rel="stylesheet"/>
+	<meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE"/>
 	<title>
 		<ui:insert name="titulo">
 			Prime_Scrum
 		</ui:insert>
 	</title>
+	
 </h:head>
 <h:body>
-
 	<p:layout fullPage="true">
 
 		<p:layoutUnit position="north" size="75" header="Prime Scrum"
