--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -8,3 +8,22 @@
 	margin-top: -100px;
 	text-align: center;
 }	
+
+.loader{
+	display: none;
+	position: absolute;
+	left: 0;
+	width: 100%;
+	bottom: 0;
+	top: 0;
+	background: rgba(0,0,0,0.3);
+	z-index: 1;
+}
+
+.loader img{
+	position: absolute;
+	top: 35%;
+	left: 45%;
+	bottom: 0;
+	
+}
