Aletrações no projeto

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -3,7 +3,7 @@
   width: 275px;    
   margin: 25px;    
   min-height:25px;
-  max-height:175px;
+ /* max-height:175px;*/
   /*padding-top:35px;*/
   position:relative;   
   border:1px solid #E8E8E8;  
@@ -27,7 +27,7 @@
   width: 130px;    
   margin: 10px;    
   min-height:25px;
-  max-height:175px;
+/*  max-height:175px;*/
   /*padding-top:35px;*/
   position:relative;   
   border:1px solid #E8E8E8;  
